Improved: Do not use deprecated ‘Class#newInstance’ (OFBIZ-11262)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-framework/trunk@1869008 13f79535-47bb-0310-9956-ffa450edef68